tests/baselines/reference/relativePathToDeclarationFile.errors.txt
test/foo.d.ts(1,23): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
test/other.d.ts(1,23): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== test/file1.ts (0 errors) ====
    import foo = require('foo');
    import other = require('./other');
    import relMod = require('./sub/relMod');
    
    if(foo.M2.x){
    	var x = new relMod(other.M2.x.charCodeAt(0));
    }
    
==== test/foo.d.ts (1 errors) ====
    export declare module M2 {
                          ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    	export var x: boolean;
    }
    
==== test/other.d.ts (1 errors) ====
    export declare module M2 {
                          ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    	export var x: string;
    }
    
==== test/sub/relMod.d.ts (0 errors) ====
    declare class Test {
    	constructor(x: number);
    }
    export = Test;
    